# a52codec

./: .gitignore  Apple License.txt  AudioCodec.h  AudioCodecComponentGlue.c  AudioCodecSDKReadMe.txt  Info-A52Codec__Upgraded_.plist  Info-AC3MovieImport.plist  Read Me.rtf  Read Me.txt  index.html  junk.txt
A52/: ACShepA52Codec.cpp  ACShepA52Codec.exp  ACShepA52Codec.h  ACShepA52Decoder.cpp  ACShepA52Decoder.h  ACShepA52DecoderPublic.r  XCAResources.r
A52Codec.xcodeproj/: project.pbxproj
A52Preferences/: A52Preferences.h  A52Preferences.m  Preferences-Info.plist
AC3MovieImport/: AC3MovieImport.c  AC3MovieImport.exp  AC3MovieImport.r  AC3MovieImportDispatch.h  debug.h  versions.h
ACPublic/: ACBaseCodec.cpp  ACBaseCodec.h  ACCodec.cpp  ACCodec.h  ACCodecDispatch.h  ACCodecDispatchTypes.h  ACComponentResources.r  ACConditionalMacros.h  ACSimpleCodec.cpp  ACSimpleCodec.h  CABundleLocker.cpp  GetCodecBundle.cpp  GetCodecBundle.h
PublicUtility/: CAConditionalMacros.h  CADebugPrintf.h  CALogMacros.h  CAMutex.cpp  CAMutex.h  CASampleTools.h  CAStreamBasicDescription.cpp  CAStreamBasicDescription.h
Release/: CreateDiskImage.sh  Makefile  dmg_adium.scpt  make-diskimage.sh
SMAC/: SMACDispatch.c  SMACIMAscom.cpp  SMACIMAscom.h  SMACIMAscom.r  SMACIMAscomDispatcher.cpp  SMACIMAsdec.cpp  SMACIMAsdec.h  SMACIMAsdec.r  SMACIMAsdecDispatcher.cpp  SMACResIDs.h  SMACSCDUtility.cpp  SMACSCDUtility.h  SMACscom.cpp  SMACscom.h  SMACsdec.cpp  SMACsdec.h
liba52/: bootstrap  (+1 more)
liba52/liba52/: Makefile.am  a52_internal.h  cpu_accel.c  cpu_state.c  crc.c  downmix.c  imdct.c  parse.c
(+7 files in other folders)
